<resources>
    <string name="app_name">JNTUH GPA Calculator R22</string>
    <string name="intro_text">Select Your Branch</string>
    <string name="cse_ContentDesc">CSE Logo</string>
    <string name="csm_ContentDesc">CSM Logo</string>
    <string name="csd_ContentDesc">CSD Logo</string>
    <string name="cso_ContentDesc">CSO Logo</string>
    <string name="csc_ContentDesc">CSC Logo</string>
    <string name="eee_ContentDesc">EEE Logo</string>
    <string name="ece_ContentDesc">ECE Logo</string>
    <string name="mech_ContentDesc">MECH Logo</string>
    <string name="civil_ContentDesc">CIVIL Logo</string>
    <string name="mining_ContentDesc">MINING Logo</string>
    <string name="it_ContentDesc">IT Logo</string>
    <string name="Semester">Select Your Semester</string>
    <string name="semOne">I-I Semester</string>
    <string name="semTwo">I-II Semester</string>
    <string name="semThree">II-I Semester</string>
    <string name="semFour">II-II Semester</string>
    <string name="semFive">III-I Semester</string>
    <string name="semSix">III-II Semester</string>
    <string name="semSeven">IV-I Semester</string>
    <string name="semEight">IV-II Semester</string>
    <string name="grade">O=10,A+=9,A=8,B+=7,B=6,C=5</string>
    <string name="subject">Subject</string>
    <string name="gradePoints">Grade Points</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="Cse_SemOne_S1">Matrices and Calculus </string>
    <string name="Cse_SemOne_S2">Engineering Chemistry </string>
    <string name="Cse_SemOne_S3">PPS</string>
    <string name="Cse_SemOne_S4">BEE</string>
    <string name="Cse_SemOne_S5">Computer Aided EG </string>
    <string name="Cse_SemOne_S6">Elements of CSE</string>
    <string name="Cse_SemOne_S7">Chemistry Lab</string>
    <string name="Cse_SemOne_S8">PPS Lab</string>
    <string name="Cse_SemOne_S9">BEE Lab </string>
    <string name="Cse_SemTwo_S1">ODE and VectorCalculus</string>
    <string name="Cse_SemTwo_S2">Applied Physics</string>
    <string name="Cse_SemTwo_S3">Engineering Workshop</string>
    <string name="Cse_SemTwo_S4">English</string>
    <string name="Cse_SemTwo_S5">Electronic D and C</string>
    <string name="Cse_SemTwo_S6">Applied Physics Lab</string>
    <string name="Cse_SemTwo_S7">Python Lab </string>
    <string name="Cse_SemTwo_S8">ELCS Lab</string>
    <string name="Cse_SemTwo_S9">IT Workshop  </string>
    <string name="Cse_SemThree_S1">Digital Electronics  </string>
    <string name="Cse_SemThree_S2">Data Structures  </string>
    <string name="Cse_SemThree_S3">COSM </string>
    <string name="Cse_SemThree_S4">COA </string>
    <string name="Cse_SemThree_S5">OOPS JAVA </string>
    <string name="Cse_SemThree_S6">Data Structures Lab   </string>
    <string name="Cse_SemThree_S7">OOPS Lab  </string>
    <string name="Cse_SemThree_S8">GS Lab  </string>
    <string name="Cse_SemThree_S9">Skill Development </string>
    <string name="Cse_SemFour_S1">Discrete Mathematics</string>
    <string name="Cse_SemFour_S2">BEFA</string>
    <string name="Cse_SemFour_S3">Operating Systems</string>
    <string name="Cse_SemFour_S4">DBMS</string>
    <string name="Cse_SemFour_S5">Software Engineering</string>
    <string name="Cse_SemFour_S6">OS Lab</string>
    <string name="Cse_SemFour_S7">DBMS Lab</string>
    <string name="Cse_SemFour_S8">Project</string>
    <string name="Cse_SemFour_S9">Skill Development</string>
    <string name="Cse_SemFive_S1">DAA</string>
    <string name="Cse_SemFive_S2">Computer Networks</string>
    <string name="Cse_SemFive_S3">Devops</string>
    <string name="Cse_SemFive_S4">Professional Elective-I </string>
    <string name="Cse_SemFive_S5">Professional Elective -II </string>
    <string name="Cse_SemFive_S6">CN Lab</string>
    <string name="Cse_SemFive_S7">Devops Lab</string>
    <string name="Cse_SemFive_S8">ACS Lab</string>
    <string name="Cse_SemFive_S9">Skill Development</string>
    <string name="Cse_SemSix_S1">Machine Learning</string>
    <string name="Cse_SemSix_S2">FLAT</string>
    <string name="Cse_SemSix_S3">Artificial Intelligence </string>
    <string name="Cse_SemSix_S4">Professional Elective – III</string>
    <string name="Cse_SemSix_S5">Open Elective-I </string>
    <string name="Cse_SemSix_S6">Machine Learning Lab</string>
    <string name="Cse_SemSix_S7">Professional Elective-III Lab</string>
    <string name="Cse_SemSix_S8">Mini Project</string>
    <string name="Cse_SemSeven_S1">CNS</string>
    <string name="Cse_SemSeven_S2">Compiler Design</string>
    <string name="Cse_SemSeven_S3">Professional Elective -IV </string>
    <string name="Cse_SemSeven_S4">Professional Elective -V</string>
    <string name="Cse_SemSeven_S5">Open Elective - II</string>
    <string name="Cse_SemSeven_S6">CNS Lab</string>
    <string name="Cse_SemSeven_S7">Compiler Design Lab</string>
    <string name="Cse_SemSeven_S8">Project Stage-I</string>
    <string name="Cse_SemEight_S1">Organizational Behavior</string>
    <string name="Cse_SemEight_S2">Professional Elective – VI </string>
    <string name="Cse_SemEight_S3">Open Elective – III</string>
    <string name="Cse_SemEight_S4">Project Stage-II</string>
    <string name="Csm_SemThree_S1">MSF</string>
    <string name="Csm_SemThree_S2">Data Structures</string>
    <string name="Csm_SemThree_S3">COA</string>
    <string name="Csm_SemThree_S4">Software Engineering</string>
    <string name="Csm_SemThree_S5">Operating Systems</string>
    <string name="Csm_SemThree_S6">DataStructures Lab</string>
    <string name="Csm_SemThree_S7">OS Lab</string>
    <string name="Csm_SemThree_S8">SE Lab</string>
    <string name="Csm_SemThree_S9">Node/React/Django</string>
    <string name="Csm_SemFour_S1">Discrete Mathematics</string>
    <string name="Csm_SemFour_S2">AT and CD</string>
    <string name="Csm_SemFour_S3">DBMS</string>
    <string name="Csm_SemFour_S4">Intro to AI</string>
    <string name="Csm_SemFour_S5">OOPS JAVA</string>
    <string name="Csm_SemFour_S6">DBMS Lab</string>
    <string name="Csm_SemFour_S7">Java Lab</string>
    <string name="Csm_SemFour_S8">Project</string>
    <string name="Csm_SemFour_S9">Prolog/ Lisp/ Pyswip</string>
    <string name="Csm_SemFive_S1">DAA</string>
    <string name="Csm_SemFive_S2">Machine Learning</string>
    <string name="Csm_SemFive_S3">Computer Networks</string>
    <string name="Csm_SemFive_S4">BEFA</string>
    <string name="Csm_SemFive_S5">Professional Elective-I </string>
    <string name="Csm_SemFive_S6">Machine Learning Lab </string>
    <string name="Csm_SemFive_S7">Computer Networks Lab</string>
    <string name="Csm_SemFive_S8">ACS Lab</string>
    <string name="Csm_SemFive_S9">UI Design Flutter</string>
    <string name="Csm_SemSix_S1">Knowledge Representation</string>
    <string name="Csm_SemSix_S2">Data Analytics</string>
    <string name="Csm_SemSix_S3">NLP</string>
    <string name="Csm_SemSix_S4">Professional Elective – II </string>
    <string name="Csm_SemSix_S5">Open Elective-I </string>
    <string name="Csm_SemSix_S6">NLP Lab</string>
    <string name="Csm_SemSix_S7">DA Lab</string>
    <string name="Csm_SemSix_S8">Mini Project</string>
    <string name="Csm_SemSeven_S1">Deep Learning</string>
    <string name="Csm_SemSeven_S2">NIP</string>
    <string name="Csm_SemSeven_S3">Professional Elective -III </string>
    <string name="Csm_SemSeven_S4">Professional Elective -IV</string>
    <string name="Csm_SemSeven_S5">Open Elective - II</string>
    <string name="Csm_SemSeven_S6">Practics,Law,Ethics</string>
    <string name="Csm_SemSeven_S7">PE - III Lab</string>
    <string name="Csm_SemSeven_S8">Project Stage - I </string>
    <string name="Csm_SemEight_S1">Professional Elective -V </string>
    <string name="Csd_SemThree_S8">Data visualization</string>
    <string name="Csd_SemFive_S1">ADA</string>
    <string name="Csd_SemFive_S2">Data Science</string>
    <string name="Csd_SemFive_S3">Computer Networks</string>
    <string name="Csd_SemFive_S4">Professional Elective - I</string>
    <string name="Csd_SemFive_S5">Professional Elective - II</string>
    <string name="Csd_SemFive_S6">R Programming Lab</string>
    <string name="Csd_SemFive_S7">ELCS Lab</string>
    <string name="Csd_SemFive_S8">ETL-Kafka/Talend</string>
    <string name="Csd_SemFive_S9">CN Lab</string>
    <string name="Csd_SemSix_S1">AT and CD</string>
    <string name="Csd_SemSix_S2">Machine Learning</string>
    <string name="Csd_SemSix_S3">Big Data Analytics</string>
    <string name="Csd_SemSix_S4">Professional Elective – III</string>
    <string name="Csd_SemSix_S5">Open Elective - I</string>
    <string name="Csd_SemSix_S6">Machine Learning Lab</string>
    <string name="Csd_SemSix_S7">Data Analytics Lab</string>
    <string name="Csd_SemSix_S8">PE- III Lab</string>
    <string name="Csd_SemSix_S9">Project/Internship</string>
    <string name="Csd_SemSeven_S1">Predictive Analytics</string>
    <string name="Csd_SemSeven_S2">W and SM Analytics</string>
    <string name="Csd_SemSeven_S3">Professional Elective – IV</string>
    <string name="Csd_SemSeven_S4">Professional Elective – V</string>
    <string name="Csd_SemSeven_S5">Open Elective – II </string>
    <string name="Csd_SemSeven_S6">W and SM Analytics Lab </string>
    <string name="Csd_SemSeven_S7">Predictive Analytics Lab</string>
    <string name="Csd_SemSeven_S8">Project Stage – I</string>
    <string name="Csc_SemFour_S4">Computer Networks</string>
    <string name="Csc_SemFour_S7">CN Lab</string>
    <string name="Csc_SemFive_S1">CNS</string>
    <string name="Csc_SemFive_S2">DBMS</string>
    <string name="Csc_SemFive_S3">FLAT</string>
    <string name="Csc_SemFive_S4">Professional Elective - I</string>
    <string name="Csc_SemFive_S5">Professional Elective - II</string>
    <string name="Csc_SemFive_S6">CNS Lab</string>
    <string name="Csc_SemFive_S7">DBMS Lab</string>
    <string name="Csc_SemFive_S8">ACS Lab</string>
    <string name="Csc_SemFive_S9">UI design-Flutter</string>
    <string name="Csc_SemSix_S1">Cyber Security</string>
    <string name="Csc_SemSix_S2">Cyber Crime </string>
    <string name="Csc_SemSix_S3">ADA</string>
    <string name="Csc_SemSix_S4">Professional Elective – III </string>
    <string name="Csc_SemSix_S5">Open Elective - I</string>
    <string name="Csc_SemSix_S6">Cyber Security Lab </string>
    <string name="Csc_SemSix_S7">Cyber Crime Lab</string>
    <string name="Csc_SemSix_S8">PE-III Lab</string>
    <string name="Csc_SemSix_S9">Mini Project</string>
    <string name="Csc_SemSeven_S1">VA and PT</string>
    <string name="Csc_SemSeven_S2">Network Management</string>
    <string name="Csc_SemSeven_S3">Professional Elective - IV </string>
    <string name="Csc_SemSeven_S4">Professional Elective - V </string>
    <string name="Csc_SemSeven_S5">Open Elective - II</string>
    <string name="Csc_SemSeven_S6">VA and PT Lab</string>
    <string name="Csc_SemSeven_S7">Network Management Lab</string>
    <string name="Csc_SemSeven_S8">Project Stage - I</string>
    <string name="Cso_SemThree_S6">Digital Electronics Lab</string>
    <string name="Cso_SemThree_S9">Data Visualization</string>
    <string name="Cso_SemFour_S3">Sensors and Devices </string>
    <string name="Cso_SemFour_S6">Sensors and Devices Lab </string>
    <string name="Cso_SemFour_S7">Java Lab </string>
    <string name="Cso_SemFive_S2">M and M</string>
    <string name="aboutDeveloper">About Developer</string>
    <string name="LinkedInLink"><a href="https://www.linkedin.com/in/saiprakash-sunkari-2211371ba/">SaiPrakash Sunkari </a></string>
    <string name="MailLink"><a href="Saiprakashsai10@gmail.com">Saiprakashsai10</a></string>
    <string name="InstagramLink"><a href="Saiprakashsai10@gmail.com">Saiprakash.Uzumaki</a></string>
    <string name="LinkedIn">LinkedIn:</string>
    <string name="Mail">Mail:</string>
    <string name="Instagram">Instagram:</string>
</resources>